--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Corybill and Justines Wedding website",
   "private": true,
   "dependencies": {
-    "express": "~3.2.6",
+    "express": "^3.2.6",
     "grunt": "0.x.x",
-    "grunt-cli": "0.x.x",
     "grunt-autoprefixer": "0.2.x",
     "grunt-browserify2": "~0.1.8",
+    "grunt-cli": "0.x.x",
     "grunt-contrib-clean": "0.5.x",
     "grunt-contrib-coffee": "0.7.x",
     "grunt-contrib-connect": "0.4.x",
