--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "^3.2.6",
     "grunt": "0.x.x",
+    "emailjs": "0.x",
     "grunt-autoprefixer": "0.2.x",
     "grunt-browserify2": "~0.1.8",
     "grunt-cli": "0.x.x",
